--- a/Example/Commons/Base.lproj/Main.storyboard
+++ b/Example/Commons/Base.lproj/Main.storyboard
@@ -23,6 +23,9 @@
                                 <rect key="frame" x="164" y="304" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="btAdd:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="HdV-OJ-Xzg"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
